--- a/src/App.css
+++ b/src/App.css
@@ -87,7 +87,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    margin: 20px 90px;
+    margin: 60px 45px;
     background-color: white;
 
   }
@@ -152,6 +152,8 @@
     padding: 10px 20px;
     border-radius: 0 0 5px 0;
     cursor: pointer;
+    width:30%;
+    margin-left: 1px;
   }
   
   .chatbox-input button:hover {
@@ -165,7 +167,7 @@
        max-height: 70%;
     }
     .chatbox-input button{
-       max-width: 60%;
+       max-width: 18%;
     }
     
   }
