--- a/src/App.css
+++ b/src/App.css
@@ -165,6 +165,7 @@
       max-width: 80%;
       flex-direction: column;
        max-height: 18%;
+       margin:5px 10px;
     }
     .chatbox-input button{
        max-width: 18%;
