--- a/src/App.css
+++ b/src/App.css
@@ -164,8 +164,8 @@
     .chatbox {
       max-width: 80%;
       flex-direction: column;
-       max-height: 18%;
-       margin:5px 10px;
+      min-height: 18%;
+     
     }
     .chatbox-input button{
        max-width: 18%;
