--- a/src/App.css
+++ b/src/App.css
@@ -49,14 +49,12 @@
     list-style: none;
     margin: 0;
     padding: 0;
-    width:max-content;
-
+    width: max-content;
   }
   
   .dropdown ul li {
     margin: 5px 0;
-    border: 1px solid rgb(177, 173, 173) ;
-     
+    border: 1px solid rgb(177, 173, 173);
   }
   
   .dropdown p {
@@ -77,10 +75,11 @@
       margin: 10px 0;
     }
   }
+  
   .chatbox {
     width: 100%;
     max-width: 800px;
-    height:450px;
+    height: 450px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -89,7 +88,7 @@
     justify-content: space-between;
     margin: 30px 45px;
     background-color: white;
-
+    position: relative;
   }
   
   .chatbox-header {
@@ -119,7 +118,6 @@
     background-color: #f1f1f1;
     text-align: left;
     align-self: flex-start;
-
   }
   
   .chatbox-message.user {
@@ -128,7 +126,6 @@
     text-align: right;
     align-self: flex-end;
     width: fit-content;
-
   }
   
   .chatbox-input {
@@ -142,7 +139,6 @@
     padding: 10px;
     border-radius: 0 0 0 5px;
     outline: none;
- 
   }
   
   .chatbox-input button {
@@ -152,7 +148,7 @@
     padding: 10px 20px;
     border-radius: 0 0 5px 0;
     cursor: pointer;
-    width:30%;
+    width: 30%;
     margin-left: 1px;
   }
   
@@ -162,15 +158,18 @@
   
   @media (max-width: 768px) {
     .chatbox {
-      max-width: 80%;
-      flex-direction: column;
-      min-height: 18%;
-     
+      max-width: 90%;
+      height: 300px;
+      margin: 20px auto;
     }
-    .chatbox-input button{
-       max-width: 18%;
+  
+    .chatbox-messages {
+      max-height: 200px;
     }
-    
+  
+    .chatbox-input button {
+      width: 25%;
+    }
   }
   
   .footer {
@@ -182,10 +181,10 @@
     bottom: 0;
     text-align: center;
   }
-
-  @media (max-width: 768px){
-    .footer{
-        width: 100%;
+  
+  @media (max-width: 768px) {
+    .footer {
+      width: 100%;
     }
   }
   
